--- a/bfs/bfs.ipynb
+++ b/bfs/bfs.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = {\n",
-    "    'A' : ['B','C'],\n",
-    "    'B' : ['D', 'E', 'B'],\n",
-    "    'C' : ['F'],\n",
-    "    'D' : [],\n",
-    "    'E' : ['F'],\n",
-    "    'F' : [\"G\"],\n",
-    "    'G' : ['B'],\n",
-    "}"
+    "graph = { \"a\" : [\"c\"],\n",
+    "          \"b\" : [\"c\", \"e\"],\n",
+    "          \"c\" : [\"a\", \"b\", \"d\", \"e\"],\n",
+    "          \"d\" : [\"c\"],\n",
+    "          \"e\" : [\"c\", \"b\"],\n",
+    "          \"f\" : []\n",
+    "        } "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +65,7 @@
     }
    ],
    "source": [
-    "found = bfs(visited, graph, 'A', 'G')\n",
+    "found = bfs(visited, graph, 'a', 'c')\n",
     "\n",
     "print(found)"
    ]
@@ -92,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
